--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:xvfb]
-command=Xvfb :10 -screen 0 1024x768x24+32 -ac -r -cc 4 -accessx -xinerama +extension Composite -extension RANDR +extension GLX
+command=Xvfb :10 -screen 0 1920x1080x24+32 -ac -r -cc 4 -accessx -xinerama +extension Composite -extension RANDR +extension GLX
 
 [program:x11vnc]
 command=x11vnc -rfbport 5900 -display :10 -rfbauth /tmp/.vnc/passwd -forever -shared
@@ -11,4 +11,4 @@ command=x11vnc -rfbport 5900 -display :10 -rfbauth /tmp/.vnc/passwd -forever -sh
 #command=xterm -fa 'Monospace' -fs 12 -display :10  -geometry 102x38
 
 [program:dbeaver]
-command=dbeaver
+command=xterm -display :10 -geometry 1x1 -e dbeaver 
