--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,13 +2,22 @@
 nodaemon=true
 
 [program:xvfb]
-command=Xvfb :10 -screen 0 1920x1080x24+32 -ac -r -cc 4 -accessx -xinerama +extension Composite -extension RANDR +extension GLX
+autorestart=true
+command=Xvfb :0 -screen 0 1920x1080x24+32 -ac -r -cc 4 -accessx -xinerama +extension Composite -extension RANDR +extension GLX
 
 [program:x11vnc]
-command=x11vnc -rfbport 5900 -display :10 -rfbauth /tmp/.vnc/passwd -forever -shared
+autorestart=true
+command=x11vnc -rfbport 5900 -display :0 -rfbauth /tmp/.vnc/passwd -forever -shared
 
 #[program:xterm]
-#command=xterm -fa 'Monospace' -fs 12 -display :10  -geometry 102x38
+#command=xterm -fa 'Monospace' -fs 12 -display :0 -geometry 102x38
 
 [program:dbeaver]
-command=xterm -display :10 -geometry 1x1 -e dbeaver 
+autorestart=true
+environment= DISPLAY=:0
+command=dbeaver 
+
+[program:awesome]
+autorestart=true
+environment= DISPLAY=:0
+command=awesome
